--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-discord
 asyncio
 Pymoe
 youtube_dl
 pip
+discord
+discord.ext import commands
+discord.ext.commands import Bot
+random
+datetime
+json
