--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ Pymoe
 youtube_dl
 pip
 discord
-discord.ext commands
-discord.ext.commands import Bot
+discord.ext 
+commands
+discord.ext.commands 
+Bot
 random
 datetime
 json
